--- a/package.json
+++ b/package.json
@@ -20,15 +20,25 @@
     "@angular/platform-browser": "^15.1.1",
     "@angular/platform-browser-dynamic": "^15.1.1",
     "@angular/router": "^15.1.1",
+    "@awesome-cordova-plugins/core": "^5.41.0",
+    "@awesome-cordova-plugins/network": "^5.41.0",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@po-ui/ng-components": "^15.0.0",
+    "@po-ui/ng-storage": "15.0.0",
+    "@po-ui/ng-sync": "^15.0.0",
     "@po-ui/ng-templates": "^15.0.0",
     "@po-ui/style": "15.0.0",
+    "@totvs/po-theme": "^15.0.0",
     "apexcharts": "^3.36.3",
+    "custom-idle-queue": "2.1.2",
+    "http-status-codes": "^2.1.4",
+    "localforage": "1.9.0",
+    "lokijs": "1.5.12",
     "ng-apexcharts": "^1.7.4",
     "rxjs": "^7.8.0",
+    "rxjs-compat": "~6.6.0",
     "tslib": "^2.4.1",
     "zone.js": "^0.12.0"
   },
